--- a/direitos humanos.html
+++ b/direitos humanos.html
@@ -30,8 +30,25 @@
 				<li class="itens">Quais são as leis dos direitos humanos?</li>
 			</ul>
 
-			<img src="pes.jpeg" class="imagempes">
+			<img src="pes.jpeg" class="imagempes" class="titulo-centralizado">
 		</div>
 	</body>
 
-<img src="pes.jpeg"
+    <body>
+             <h4="titulo-centralizado"></h1> Por que existem os direitos humanos?</h4>
+            
+            <h2>
+                O objetivo era criar um ambiente de multilateralismo que garantisse a paz entre as nações e o fortalecimento- 
+                dos direitos humanos, para que os horrores da guerra recém-terminada não se repetissem..</h2>
+            
+            <h3 class="titulo-centralizado"> O que são os direitos humanos</h3>
+
+            <h2>Os direitos humanos são normas que reconhecem e protegem a dignidade de todos os seres humanos.
+                 Os direitos humanos regem o modo como os seres humanos individualmente vivem em sociedade e entre si,
+                  bem como sua relação com o Estado e as obrigações que o Estado tem em relação a eles</h2>
+
+
+
+
+
+    </body>
